--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="media-left pix-icon-area text-center pix-padding-right-20 pix-padding-top-10">
              <img src="images/company/store.png" alt="">
             </div>
-            <div class="media-body">
+            <div href="#map" class="media-body">
              <h5 class="pix-navy-blue">
               <span class="pix_edit_text"><strong>Encontre-nos</strong></span>
              </h5>
@@ -274,9 +274,6 @@
            <h2 class="pix-white pix-no-margin-top secondary-font">
             <span class="pix_edit_text"><span style="font-weight: 700;">Nossas Marcas</span></span>
            </h2>
-           <p class="pix-navy-blue-2 big-text pix-margin-bottom-20">
-            <span class="pix_edit_text">A Essência de vestir qualidade.</span>
-           </p>
           </div>
          </div><div class="col-xs-12 col-sm-3 column ui-droppable col-md-4" style="display: block;">
      <div class="pix-content text-center">
@@ -323,7 +320,7 @@
  </div>
 
 
-<div class="pix_section pix-padding" id="section_content_1" style="display: block;">
+<div class="pix_section pix-padding" id="map" style="display: block;">
   <div class="container">
    <div class="row">
     <div class="col-md-12 col-xs-12 col-sm-12 column ui-droppable">
