--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
         </div>
         <div class="navbar-collapse collapse" id="pix-navbar-collapse" style="height: 1px;">
          <ul class="nav navbar-nav navbar-right media-middle pix-header-nav pix-adjust-height" id="pix-header-nav" style="margin-top: 5px;">
-<li><a href="#about" class="pix-navy-blue-2 pix-nav-link " data-toggle="null" style="color: rgb(129, 142, 155);">QUEM SOMOS</a>
+<li><a href="#about" class="pix-navy-blue-2 pix-nav-link" data-toggle="null" style="color: rgb(129, 142, 155);">QUEM SOMOS</a>
 </li>
 <li class="dropdown"><a href="#" class="dropdown-toggle pix-navy-blue-2 pix-nav-link" data-toggle="dropdown" style="color: rgb(129, 142, 155);">PRODUTOS</a>
 <ul class="dropdown-menu dropdown-menu-left">
 
-<li><a href="#" class="pix-nav-link " data-toggle="null">MONTELESTE</a>
+<li><a href="produtos-monteleste.html" class="pix-nav-link" data-toggle="null">MONTELESTE</a>
 </li>
-<li><a href="#" class="pix-nav-link " data-toggle="null">LANG</a>
+<li><a href="#" class="pix-nav-link" data-toggle="null">LANG</a>
 </li>
-<li><a href="#" class="pix-nav-link " data-toggle="null">PRIVATE LABEL</a>
+<li><a href="#" class="pix-nav-link" data-toggle="null">PRIVATE LABEL</a>
 </li>
 </ul>
 </li>
-<li><a href="#payment" class="pix-gray pix-nav-link " data-toggle="undefined" style="color: rgb(129, 142, 155);">COMO COMPRAR</a>
+<li><a href="#payment" class="pix-gray pix-nav-link" data-toggle="undefined" style="color: rgb(129, 142, 155);">COMO COMPRAR</a>
 </li>
-<li><a href="#" class="pix-navy-blue-2 pix-nav-link " data-toggle="modal" data-target="#popup_2" style="color: rgb(129, 142, 155);">CONTATO</a>
+<li><a href="#" class="pix-navy-blue-2 pix-nav-link" data-toggle="modal" data-target="#popup_2" style="color: rgb(129, 142, 155);">CONTATO</a>
 </li>
 </ul>
         </div>
@@ -209,6 +209,10 @@
            <p class="pix-navy-blue-2 big-text pix-margin-bottom-20">
             <span class="pix_edit_text">Temos vários representantes espalhados por todo <span style="font-weight: bold;">Brasil.</span><br><span>Entre em contato com nossa central de vendas para maiores informações. Nossa central é <span style="font-weight: bold;">rápida</span> e <span style="font-weight: bold;">ágil</span>.</span></span>
            </p>
+           <a href="">
+            <img style="height: 40px;" src="./images/logos/whatsapp.png" />
+           </a>
+           </p>
           </div>
          </div>
          <div class="col-xs-12 col-sm-6 column ui-droppable col-md-12" style="display: block;">
@@ -275,18 +279,23 @@
             <span class="pix_edit_text"><span style="font-weight: 700;">Nossas Marcas</span></span>
            </h2>
           </div>
-         </div><div class="col-xs-12 col-sm-3 column ui-droppable col-md-4" style="display: block;">
-     <div class="pix-content text-center">
-      <div class="pix-cover-shape-220 pix-margin-v-10 pix-radius-3">
-       <a data-fancybox="gallery" href="uploads/privatelabel-U3D.png">
-       <img src="uploads/privatelabel-U3D.png" alt="" class="img-responsive">
-       </a>
+         </div>
+ 
+
+    <div class="col-xs-12 col-sm-3 column ui-droppable col-md-4" style="display: block;">
+      <div class="pix-content text-center">
+       <div class="pix-cover-shape-220 pix-margin-v-10 pix-radius-3">
+        <a data-fancybox="gallery" href="uploads/monteleste-6ge.png">
+         <img src="uploads/monteleste-6ge.png" alt="" class="img-responsive">
+        </a>
+       </div>
+       <h6 class="pix-black-gray-light text-center">
+        <span class="pix_edit_text"><strong>MONTELESTE</strong></span>
+       </h6>
       </div>
-      <h6 class="pix-black-gray-light text-center">
-       <span class="pix_edit_text"><strong>PRIVATE LABEL</strong></span>
-      </h6>
      </div>
-    </div><div class="col-xs-12 col-sm-3 column ui-droppable col-md-4" style="display: block;">
+
+    <div class="col-xs-12 col-sm-3 column ui-droppable col-md-4" style="display: block;">
      <div class="pix-content text-center">
       <div class="pix-cover-shape-220 pix-margin-v-10 pix-radius-3">
        <a data-fancybox="gallery" href="uploads/lang-d5k.png">
@@ -297,18 +306,22 @@
        <span class="pix_edit_text"><strong>LANG</strong></span>
       </h6>
      </div>
-    </div><div class="col-xs-12 col-sm-3 column ui-droppable col-md-4" style="display: block;">
-     <div class="pix-content text-center">
-      <div class="pix-cover-shape-220 pix-margin-v-10 pix-radius-3">
-       <a data-fancybox="gallery" href="uploads/monteleste-6ge.png">
-        <img src="uploads/monteleste-6ge.png" alt="" class="img-responsive">
-       </a>
-      </div>
-      <h6 class="pix-black-gray-light text-center">
-       <span class="pix_edit_text"><strong>MONTELESTE</strong></span>
-      </h6>
-     </div>
     </div>
+    
+
+    <div class="col-xs-12 col-sm-3 column ui-droppable col-md-4" style="display: block;">
+      <div class="pix-content text-center">
+       <div class="pix-cover-shape-220 pix-margin-v-10 pix-radius-3">
+        <a data-fancybox="gallery" href="uploads/privatelabel-U3D.png">
+        <img src="uploads/privatelabel-U3D.png" alt="" class="img-responsive">
+        </a>
+       </div>
+       <h6 class="pix-black-gray-light text-center">
+        <span class="pix_edit_text"><strong>PRIVATE LABEL</strong></span>
+       </h6>
+      </div>
+     </div>
+  
          
         </div>
        </div>
