--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <div class="pix_section inner_section" id="section_3">
        <div class="container">
         <div class="row">
+         <a href="#map">
          <div class="col-md-12 col-xs-12 col-sm-12 column ui-droppable">
           <div class="pix-content pix-padding-v-10 text-left">
            <div class="media ic">
@@ -119,6 +120,8 @@
            </div>
           </div>
          </div>
+         </a>
+         <a href="#payment">
          <div class="col-md-12 col-xs-12 col-sm-12 column ui-droppable" style="display: block;">
           <div class="pix-content pix-padding-v-10  text-left">
            <div class="media">
@@ -135,7 +138,12 @@
             </div>
            </div>
           </div>
-         </div><div class="col-md-12 col-xs-12 col-sm-12 column ui-droppable">
+         </div>
+          </a>
+          <a href="#" data-toggle="modal" data-target="#popup_1">
+
+          
+         <div class="col-md-12 col-xs-12 col-sm-12 column ui-droppable">
           <div class="pix-content pix-padding-v-10  text-left">
            <div class="media">
             <div class="media-left pix-icon-area text-center pix-padding-right-20 pix-padding-top-20">
@@ -152,7 +160,7 @@
            </div>
           </div>
          </div>
-         
+         </a>
         </div>
        </div>
       </div>
@@ -198,7 +206,7 @@
     </div>
     <div class="col-xs-12 col-sm-8 column ui-droppable col-md-7">
      <div class="pix-content">
-      <div class="pix_section inner_section pix-padding-v-20" id="section_8">
+      <div class="pix_section inner_section pix-padding-v-20" id="payment">
        <div class="container">
         <div class="row">
          <div class="col-md-12 col-xs-12 col-sm-12 column ui-droppable">
@@ -209,8 +217,8 @@
            <p class="pix-navy-blue-2 big-text pix-margin-bottom-20">
             <span class="pix_edit_text">Temos vários representantes espalhados por todo <span style="font-weight: bold;">Brasil.</span><br><span>Entre em contato com nossa central de vendas para maiores informações. Nossa central é <span style="font-weight: bold;">rápida</span> e <span style="font-weight: bold;">ágil</span>.</span></span>
            </p>
-           <a href="">
-            <img style="height: 40px;" src="./images/logos/whatsapp.png" />
+           <a href="https://api.whatsapp.com/send?phone=5547988883290&text=Ol%C3%A1!%20Estou%20entrando%20em%20contato%20a%20respeito%20dos%20produtos%20dispon%C3%ADveis%20para%20compra%20no%20site">
+            <img class="pix-margin-bottom-30" style="height: 40px;" src="./images/logos/whatsapp.png" />
            </a>
            </p>
           </div>
