--- a/produtos-monteleste.html
+++ b/produtos-monteleste.html
@@ -38,7 +38,7 @@
         </div>
         <div class="navbar-collapse collapse" id="pix-navbar-collapse" style="height: 1px;">
          <ul class="nav navbar-nav navbar-right media-middle pix-header-nav pix-adjust-height" id="pix-header-nav" style="margin-top: 5px;">
-<li><a href="index.html" class="pix-navy-blue-2 pix-nav-link " data-toggle="null" style="color: rgb(129, 142, 155);">QUEM SOMOS</a>
+<li><a href="./index.html#about" class="pix-navy-blue-2 pix-nav-link " data-toggle="null" style="color: rgb(129, 142, 155);">QUEM SOMOS</a>
 </li>
 <li class="dropdown"><a href="#" class="dropdown-toggle pix-navy-blue-2 pix-nav-link" data-toggle="dropdown" style="color: rgb(129, 142, 155);">PRODUTOS</a>
 <ul class="dropdown-menu dropdown-menu-left">
