--- a/inverno-monteleste.html
+++ b/inverno-monteleste.html
@@ -38,7 +38,7 @@
         </div>
         <div class="navbar-collapse collapse" id="pix-navbar-collapse" style="height: 1px;">
          <ul class="nav navbar-nav navbar-right media-middle pix-header-nav pix-adjust-height" id="pix-header-nav" style="margin-top: 5px;">
-<li><a href="index.html" class="pix-navy-blue-2 pix-nav-link " data-toggle="null" style="color: rgb(129, 142, 155);">QUEM SOMOS</a>
+<li><a href="./index.html" class="pix-navy-blue-2 pix-nav-link " data-toggle="null" style="color: rgb(129, 142, 155);">QUEM SOMOS</a>
 </li>
 <li class="dropdown"><a class="dropdown-toggle pix-navy-blue-2 pix-nav-link" data-toggle="dropdown" style="color: rgb(129, 142, 155);">PRODUTOS</a>
 <ul class="dropdown-menu dropdown-menu-left">
@@ -51,7 +51,7 @@
 </li>
 </ul>
 </li>
-<li><a href="./index.html/#payment" class="pix-gray pix-nav-link " data-toggle="undefined" style="color: rgb(129, 142, 155);">COMO COMPRAR</a>
+<li><a href="./index.html#payment" class="pix-gray pix-nav-link " data-toggle="undefined" style="color: rgb(129, 142, 155);">COMO COMPRAR</a>
 </li>
 <li><a href="#" class="pix-navy-blue-2 pix-nav-link " data-toggle="modal" style="color: rgb(129, 142, 155);">CONTATO</a>
 </li>
@@ -95,7 +95,7 @@
     <div class="col-md-12 col-xs-12 col-sm-12 column ui-droppable">
      <div class="pix-content">
       <h1 class="pix-black-gray-dark text-center pix-no-margin-top">
-       <span class="pix_edit_text">Monteleste</span>
+       <span class="pix_edit_text">Monte Leste</span>
       </h1>
       <h2 class="pix-black-gray-dark text-center pix-no-margin-top">
        <span class="pix_edit_text">Aprecie oque te faz diferente!</span>
