--- a/produtos_lang.html
+++ b/produtos_lang.html
@@ -43,7 +43,7 @@
 <li class="dropdown"><a href="#" class="dropdown-toggle pix-navy-blue-2 pix-nav-link" data-toggle="dropdown" style="color: rgb(129, 142, 155);">PRODUTOS</a>
 <ul class="dropdown-menu dropdown-menu-left">
 
-<li><a href="./produtos_monteleste.html" class="pix-nav-link  " data-toggle="null">MONTELESTE</a>
+<li><a href="./produtos-monteleste.html" class="pix-nav-link  " data-toggle="null">MONTELESTE</a>
 </li>
 <li><a href="./produtos_lang.html" class="pix-nav-link  " data-toggle="null">LANG</a>
 </li>
@@ -84,25 +84,20 @@
 
 <div class="pix_section pix-padding-v-40 gray-bg" id="section_content_2" style="display: block;">
   <div class="container">
-   <div class="row">
+   <div class="row ">
     <div class="col-xs-12 col-sm-12 column ui-droppable col-md-12">
      <div class="pix-content">
       <h2 class="pix-black-gray-dark text-center pix-no-margin-top secondary-font">
-       <span class="pix_edit_text"><strong>Monte Leste</strong></span>
+       <span class="pix_edit_text"><strong>Lang</strong></span>
       </h2>
      </div>
     </div>
-    <a href="./verao_monteleste.html">
-    <div class="col-xs-12 col-sm-4 column ui-droppable col-md-6">
+  
+    
+    <a href="./inverno_lang.html">
+    <div style="float:none; margin: auto;" class="col-xs-12 col-sm-4 column ui-droppable col-md-6">
      <div class="pix-content"><div class="pix-margin-v-30 text-center">
-      <img src="uploads/monte-zfx.png" alt="" class="img-responsive">
-     </div></div>
-    </div>
-    </a>
-    <a href="./inverno-monteleste.html">
-    <div class="col-xs-12 col-sm-4 column ui-droppable col-md-6">
-     <div class="pix-content"><div class="pix-margin-v-30 text-center">
-      <img src="uploads/monte2-akm.png" alt="" class="img-responsive">
+      <img src="uploads/banner-lang-qoO.png" alt="" class="img-responsive">
      </div></div>
     </div>
     </a>
