--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 <li class="dropdown"><a href="#" class="dropdown-toggle pix-navy-blue-2 pix-nav-link" data-toggle="dropdown" style="color: rgb(129, 142, 155);">PRODUTOS</a>
 <ul class="dropdown-menu dropdown-menu-left">
 
-<li><a href="produtos-monteleste.html" class="pix-nav-link" data-toggle="null">MONTELESTE</a>
+<li><a href="./produtos-monteleste.html" class="pix-nav-link" data-toggle="null">MONTELESTE</a>
 </li>
-<li><a href="#" class="pix-nav-link" data-toggle="null">LANG</a>
+<li><a href="./produtos_lang.html" class="pix-nav-link" data-toggle="null">LANG</a>
 </li>
 <li><a href="#" class="pix-nav-link" data-toggle="null">PRIVATE LABEL</a>
 </li>
@@ -377,9 +377,9 @@
       <div class="pix-light-gray text-right mobile-text-center pix-margin-links">
         <a href="#about" class="btn btn-link pix-black-gray-light pix-padding-h-20 normal"><span class="pix_edit_text"><span style="font-weight: 700;">Sobre</span></span></a>
         <a href="#" class="btn btn-link pix-black-gray-light pix-padding-h-20 normal" data-toggle="modal" data-target="#popup_1"><span class="pix_edit_text"><strong>Trabalhe Conosco</strong></span></a>
-        <a href="#section_10" class="btn btn-link pix-black-gray-light pix-padding-h-20 normal"><span class="pix_edit_text"><strong>Lojas</strong></span></a>
+        <a href="#payment" class="btn btn-link pix-black-gray-light pix-padding-h-20 normal"><span class="pix_edit_text"><strong>Lojas</strong></span></a>
         <a href="#" class="btn btn-link pix-black-gray-light pix-padding-h-20 normal" data-toggle="modal" data-target="#popup_2"><span class="pix_edit_text"><strong>Contato</strong></span></a>
-        <a href="#" class="btn btn-link pix-black-gray-light pix-padding-h-20"><span class="pix_edit_text"><span style="font-weight: 700;">Produtos</span></span></a>
+        
       </div>
      </div></div>
     </div>
