--- a/inverno-monteleste.html
+++ b/inverno-monteleste.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand logo-img logo-img-a pix-adjust-height" href="#"><img
+                  <a class="navbar-brand logo-img logo-img-a pix-adjust-height" href="./index.html"><img
                       src="uploads/logo-lang-ZzP.png" alt="" class="img-responsive pix-logo-img"></a>
                 </div>
                 <div class="navbar-collapse collapse" id="pix-navbar-collapse" style="height: 1px;">
