--- a/produtos_private_label.html
+++ b/produtos_private_label.html
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
          </button>
-         <a class="navbar-brand logo-img logo-img-a pix-adjust-height" href="#"><img src="uploads/logo-lang-ZzP.png" alt="" class="img-responsive pix-logo-img"></a>
+         <a class="navbar-brand logo-img logo-img-a pix-adjust-height" href="./index.html"><img src="uploads/logo-lang-ZzP.png" alt="" class="img-responsive pix-logo-img"></a>
         </div>
         <div class="navbar-collapse collapse" id="pix-navbar-collapse" style="height: 1px;">
          <ul class="nav navbar-nav navbar-right media-middle pix-header-nav pix-adjust-height" id="pix-header-nav" style="margin-top: 5px;">
